# threa

./: .gitignore  LICENSE  README.md  pyproject.toml  test.sh
.github/workflows/: python-package.yml
test/: test_collection.py  test_thread.py  test_wrapper.py
threa/: __init__.py  collection.py  runnable.py  thread.py  wrapper.py
