[project]
name = "threa"
version = "1.9.1"
description = "🧵 Better threads 🧵"
authors = [{ name = "Tom Ritchford", email = "tom@swirly.com" }]
requires-python = ">=3.8"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["coverage>=7.3.2,<8"]

[project.urls]
Homepage = "https://github.com/rec/threa"
Repository = "https://github.com/rec/threa"

[dependency-groups]
dev = [
    "black",
    "flake8",
    "pytest",
    "ruff",
    "mypy",
]

[tool.uv]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.mypy]
strict = true

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"
