[project]
name = "threa"
version = "1.9.1"
description = "🧵 Better threads 🧵"
authors = [{ name = "Tom Ritchford", email = "tom@swirly.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["coverage>=7.3.2,<8"]

[project.urls]
Homepage = "https://github.com/rec/threa"
Repository = "https://github.com/rec/threa"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "coverage>=7.4.1",
    "pyupgrade>=3.21.2",
    "ty>=0.0.14",
]

[tool.uv]

[tool.uv.build-backend]
module-root = ""


[tool.coverage]
[tool.coverage.run]
branch = true

[tool.coverage.report]
skip_covered = true
exclude_lines = ["pragma: no cover", "if False:", "if __name__ == .__main__.:", "raise NotImplementedError"]
[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"
