[project]
name = "threa"
version = "1.10.0"
description = "🧵 Better threads 🧵"
authors = [{ name = "Tom Ritchford", email = "tom@swirly.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
classifiers = ["Programming Language :: Python :: 3", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3.14"]
dependencies = ["coverage>=7.3.2,<8"]

[project.urls]
Homepage = "https://github.com/rec/threa"
Repository = "https://github.com/rec/threa"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "coverage>=7.4.1",
    "pyupgrade>=3.21.2",
    "ty>=0.0.14",
]

[tool.coverage]
[tool.coverage.run]
branch = true

[tool.coverage.report]
skip_covered = true
exclude_lines = ["pragma: no cover", "if False:", "if __name__ == .__main__.:", "raise NotImplementedError"]
[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"

[tool.poetry]
name = "threa"
version = "0.1.0"
description = "🧵 Better threads 🧵"
authors = ["Tom Ritchford <tom@swirly.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
